Solved the overflow problem with box-sizing.

--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,10 @@
 }
 
 nav ul {
-   
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap:20px;
 }
 
 nav li {
